--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/xerocross/zetteldrop-back-4/issues"
   },
-  "homepage": "https://github.com/xerocross/zetteldrop-back-4#readme"
+  "homepage": "https://github.com/xerocross/zetteldrop-back-4#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mongodb": "^3.6.6",
+    "mongoose": "^5.12.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "typescript": "^4.2.4"
+  }
 }
