--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/**/*.spec.ts",
+    "build": "tsc",
+    "startApp": "node dist/app.js",
+    "prestart": "npm run build",
+    "start": "npm run startApp"
   },
   "repository": {
     "type": "git",
@@ -24,7 +28,13 @@
     "mongoose": "^5.12.7"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.17",
     "@types/express": "^4.17.11",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.1",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
 }
